# flex

./: .cproject  .gitignore  .project  Makefile  README.md  \  constants.F90  gw-huangli.py  gw-huangli.tgz  main.F90  main_defs.F90  n.flex
chi/: chi_calc.F90
flex_m/: .d  Makefile  constants.F90  constants.f90  dep.d  dep.d1  eliashberg.f90  flex_2d.f90  flex_m.cbp  functions.f90  functions_base.f90  functions_g_chi.f90  functions_init.f90  functions_mixer.f90  functions_test.f90  input_file  input_file.module  input_file.nb5_kuroki  m.sh  main.f90  main.f90~  main_defs.F90  mpi_functions.f90  mpi_rank.f90  mu_history  myfunctions.f90  parameters.F90  parameters.f90  parameters2.F90  parameters2.f90  readin.F90  readin.f90  testband.f90  testmodule.f  testmodule.f03  testmodule.f90
flex_m1/: constants.f90  main.f90
init/: init_environ.F90  init_pair_wave.F90  readin.F90
src/: CMakeLists.txt  Makefile  Makefile.gfortran  constants.f90  eliashberg.f90  flex_2d.f90  functions.f90  functions_base.f90  functions_g_chi.f90  functions_init.f90  functions_mixer.f90  input_file  parameters.f90  parameters2.f90  testmodule.f03
