cmake_minimum_required (VERSION 2.6)
project (ffff)
enable_language (Fortran)
if (CMAKE_Fortran_COMPILER MATCHES "gfortran")
  message("Found gfortran.")
  set (CMAKE_Fortran_FLAGS "-funroll-all-loops -fno-f2c -O3 -fopenmp -cpp -mcmodel=medium -fimplicit-none -finline -floop-nest-optimize -funroll-all-loops -floop-parallelize-all")
  set (CMAKE_EXE_LINKER_FLAGS "")
  set (LINK_LIBRARIES fftw3 openblas)
else (CMAKE_Fortran_COMPILER MATCHES "ifort")
  message("Found ifort.")
  set (CMAKE_Fortran_FLAGS "-I. -mcmodel=large -shared-intel -w -mkl -fpp -extend-source -O3 -xHost -ipo -finline-functions -no-inline-factor -qopenmp -parallel")
  set (CMAKE_EXE_LINKER_FLAGS "-mkl")
endif ()
link_directories(${PROJECT_SOURCE_DIR} ../lib)
file( GLOB SRC_LIST *.f90 ) 
add_executable (ffff ${SRC_LIST})
target_link_libraries(ffff ${LINK_LIBRARIES})
